resources/httpbin/middlewares.gateway.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: route-middleware
spec:
  chain:
    middlewares:
    - name: proxy-custom-header
    - name: proxy-ratelimit
    - name: entraid-jwt-authentication
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: entraid-jwt-authentication
  namespace: apps
spec:
  plugin:
    jwt:
      jwksUrl: "https://login.microsoftonline.com/common/discovery/v2.0/keys"
      forwardHeaders:
        X-APPID-CLAIM: appid
