resources/httpbin/gateway-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpbin-gateway-middleware
spec:
  chain:
    middlewares:
    - name: proxy-custom-header
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-gateway
  annotations:
    hub.traefik.io/api: httpbin-api
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: web
      kind: Gateway
  hostnames:
    - "gateway.traefik"
    - "gateway.traefik.localhost"
  rules:
    - backendRefs:
        - name: httpbin-svc
          port: 8000
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: httpbin-gateway-middleware
