resources/httpbin/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: route-middleware
spec:
  chain:
    middlewares:
    - name: proxy-custom-header
    - name: proxy-ratelimit
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`httpbin.traefik`) || Host(`httpbin.traefik.localhost`)
      services:
        - name: httpbin-svc
          port: 8000
      middlewares:
        - name: route-middleware
